--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 DATABASE = "api_miguel"
-USER = "root"
-HOST = "localhost"
-PASSWORD = "Miguelito2004"
+USER = "admin"
+HOST = "base-ali.cliui2m8iqi4.us-east-1.rds.amazonaws.com"
+PASSWORD = "Hernandez2004"
+
 AMQP_URL_EC2 = amqp://guest:guest@3.226.114.66
 EXCHANGE_EC2 = MiguelCola
